--- a/pioneer.html
+++ b/pioneer.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="nav-content">
                 <div class="logo">
-                    <img src="Branding /ProprHome_logo_for_white_bg.svg" alt="ProprHome" height="56">
+                    <img src="ProprHome_logo_for_white_bg.png?v=3" alt="ProprHome" style="height: 28px !important;">
                 </div>
                 <div class="nav-links" id="navLinks">
                     <a href="index.html">Home</a>
