Resolve merge conflicts in video controls

--- a/pioneer.html
+++ b/pioneer.html
@@ -16,13 +16,13 @@
     <nav class="navbar" id="navbar">
         <div class="container">
             <div class="nav-content">
-                <div class="logo">
+                <a href="index.html" class="logo">
                     <img src="ProprHome_logo_for_white_bg.png?v=3" alt="ProprHome" style="height: 28px !important;">
-                </div>
+                </a>
                 <div class="nav-links" id="navLinks">
-                    <a href="index.html">Home</a>
                     <a href="index.html#agents">For Agents</a>
                     <a href="index.html#agencies">For Agencies</a>
+                    <a href="index.html#buyers">For Buyers & Tenants</a>
                 </div>
                 <a href="index.html" class="btn btn-secondary nav-cta">Back to Home</a>
             </div>
