--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
     <nav class="navbar" id="navbar">
         <div class="container">
             <div class="nav-content">
-                <div class="logo">
+                <a href="#" class="logo">
                     <img src="ProprHome_logo_for_white_bg.png?v=3" alt="ProprHome" style="height: 28px !important;">
-                </div>
+                </a>
                 <div class="nav-links" id="navLinks">
                     <a href="#agents">For Agents</a>
                     <a href="#agencies">For Agencies</a>
@@ -208,22 +208,22 @@
                             Your browser does not support the video tag.
                         </video>
                         <div class="video-controls">
-                            <button id="playPauseBtn" class="video-control-btn" aria-label="Play/Pause">
-                                <svg id="pauseIcon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <button class="video-control-btn" id="playPauseBtn" aria-label="Play/Pause video">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="pause-icon">
                                     <rect x="6" y="4" width="4" height="16"></rect>
                                     <rect x="14" y="4" width="4" height="16"></rect>
                                 </svg>
-                                <svg id="playIcon" style="display: none;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="play-icon" style="display:none;">
                                     <polygon points="5 3 19 12 5 21 5 3"></polygon>
                                 </svg>
                             </button>
-                            <button id="soundBtn" class="video-control-btn" aria-label="Toggle sound">
-                                <svg id="mutedIcon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <button class="video-control-btn" id="muteBtn" aria-label="Mute/Unmute video">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mute-icon" style="display:none;">
                                     <polygon points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"></polygon>
                                     <line x1="23" y1="9" x2="17" y2="15"></line>
                                     <line x1="17" y1="9" x2="23" y2="15"></line>
                                 </svg>
-                                <svg id="soundIcon" style="display: none;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="unmute-icon">
                                     <polygon points="11 5 6 9 2 9 2 15 6 15 11 19 11 5"></polygon>
                                     <path d="M19.07 4.93a10 10 0 0 1 0 14.14M15.54 8.46a5 5 0 0 1 0 7.07"></path>
                                 </svg>
