Update platform section heading

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
     <!-- Platform Features -->
     <section class="platform-features">
         <div class="container">
-            <h2 class="section-title">Everything you need in one platform</h2>
+            <h2 class="section-title">All you need in one platform</h2>
             <div class="features-grid">
                 <div class="feature-card">
                     <img src="Branding%20/AI%20Search%20engine.svg" alt="" class="feature-icon" width="48" height="48">
